# polymarket_bot_and_analysis_v2

./: .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml
config/: btc_5m_bot.yaml  copy_trading.yaml  crypto_data.yaml  polymarket.yaml
data/wallets/0x476639d9845d7a0261cb005dae6473f089ff5a03/: polymarket_data.json
src/analyze_wallet_positions/: README.md  __init__.py  analyze_trades.py  cli.py  plot_windows.py
src/base_bot/: README.md  __init__.py  base_bot.py
src/bot_tools/: README.md  __init__.py
src/bot_tools/atr_filter/: __init__.py  atr.py
src/bot_tools/clob_connection/: __init__.py  client.py
src/bot_tools/logger/: __init__.py  trade_logger.py
src/bot_tools/time_utils/: __init__.py  time_filter.py  window_manager.py
src/btc_5m_trader/: README.md  __init__.py  bot.py  cli.py  simulator.py
src/btc_reversal_model/: README.md  __init__.py  build_dataset.py  reversal_model.py  visualize.py
src/candle_pattern_analyzer/: README.md  __init__.py  analyzer.py  cli.py
src/copy_wallets_positions/: __init__.py  config.py  display.py  executor.py  main.py  monitor.py  risk.py
src/crypto_data/: __init__.py  cli.py  config.py  filters.py
src/crypto_data/downloaders/: __init__.py  binance.py
src/crypto_data/loaders/: __init__.py  price_loader.py
src/crypto_data/visualization/: __init__.py
src/download_wallet_positions/: __init__.py  cli.py  main.py
src/polymarket_graph/: __init__.py  cli.py
src/polymarket_graph/adapters/: __init__.py
src/polymarket_graph/adapters/extraction/: __init__.py  base.py  clob_api.py  gamma_api.py  hybrid.py
src/polymarket_graph/adapters/loading/: __init__.py  neo4j_loader.py
src/polymarket_graph/adapters/transform/: __init__.py  feature_engineering.py  normalizer.py
src/polymarket_graph/analytics/: __init__.py
src/polymarket_graph/analytics/clustering/: __init__.py  wallet_clustering.py
src/polymarket_graph/analytics/influence_graph/: __init__.py  builder.py  influence.py
src/polymarket_graph/analytics/market_correlation/: __init__.py  market_correlation.py
src/polymarket_graph/analytics/visualization/: __init__.py  wallet_plot.py
src/polymarket_graph/application/: __init__.py  checkpoint.py  use_cases.py
src/polymarket_graph/domain/: __init__.py  entities.py  rules.py
src/polymarket_graph/infrastructure/: __init__.py  config.py  logging.py  neo4j_client.py
src/save_wallet_positions/: __init__.py  save_detected_trades.py  save_wallet_positions.py
tests/integration/: test_neo4j.py
tests/unit/: test_config.py  test_crypto_data.py
